--- a/desafio/src/Desafio/header/HeadComp.css
+++ b/desafio/src/Desafio/header/HeadComp.css
@@ -1,6 +1,7 @@
 #headerMainDiv{
     width: 100%;
     margin:0;
+    height: 120px;
 }
 
 
@@ -9,14 +10,17 @@
     background-color:gold;
     width: 60px;
     margin-left: 10px;
+    margin-top:10px;
     padding: 0;
     z-index:2;
 } 
 
 #logoSenpai{
-    top:10px;
+    top:40px;
     left:10px;
     z-index:-1;
+    position: absolute;
+
 }
 
 #headerPHome{
