--- a/desafio/src/Desafio/Footer/Footer.css
+++ b/desafio/src/Desafio/Footer/Footer.css
@@ -24,9 +24,9 @@ a {
 }
 
 .imagen-senpai {
-    width: 200px;
-    height: 200px;
-    background-image: url(./imagenes/senpaiLogo.jpg);
+    width: 120px;
+    height: 110px;
+    background-image: url(./imagenes/senpaiacademy.svg);
     background-size: cover;
     background-repeat: no-repeat;
 
@@ -46,8 +46,18 @@ a {
     display: flex;
     align-items: flex-end;
     justify-content: center;
+    padding-bottom: 3%;
 }
 
 .redes-footer {
     grid-area: redes;
+    display: flex;
+    justify-content: space-evenly;
+    margin-left: 30%;
+    margin-right: 30%;
+}
+
+.icono-redes {
+    width: 50px;
+    height: 50px;
 }
