--- a/desafio/src/Desafio/main/main.css
+++ b/desafio/src/Desafio/main/main.css
@@ -86,6 +86,12 @@
 .presentacion {
     width: 50%;
     height: 100%;
+    display: grid;
+    grid-template-rows: 50% 50%;
+    grid-template-columns: 30% 70%; 
+    grid-template-areas: 
+    "img rest"
+    "desc desc"
 }
 
 .descripcion {
@@ -110,4 +116,51 @@
 .hidden {
     display: none;
 
+}
+
+#popUpNombre{
+    font-size: 32px;
+    font-weight: 600;
+
+}
+
+.popUpStat{
+    text-align:left;
+    margin-left: 30px;
+}
+
+#rest{
+    grid-area: rest;
+}
+
+#divDesc{
+    grid-area: desc;
+}
+
+#imgDeportistasPopUp{
+    grid-area: img;
+    width: 100%;
+    height: 100%;
+}
+
+#listaEstadisticas{
+    background-color: beige;
+    margin: 10px;
+    width: 90%;
+    height: 90%;
+    border-style:solid;
+}
+
+.listItemEstadisticas{
+    padding-top: 10px;
+    border-bottom: solid;
+    width: 350px;
+    margin:auto;
+}
+
+.divStatBarra{
+    border-radius:3px;
+    width: 35px;
+    height:15px;
+    background-color:black;
 }
